crux-mir/test/symb_eval/overrides/override5.good
test override5/<DISAMB>::f[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- override5/<DISAMB>::f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/overrides/override5.rs:10:5: 10:47: error: in override5/<DISAMB>::f[0]
[Crux]   MIR assertion at test/symb_eval/overrides/override5.rs:10:5:
[Crux]   	foo.wrapping_add(1) != 0

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
